# personal-spend-tracking

./: .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/: prd.md
docs/plans/: 2026-02-21-cicd-makefile-implementation.md  2026-02-21-email-spend-tracking-design.md  2026-02-21-email-spend-tracking-implementation.md  2026-02-22-bank-email-parsers-design.md  2026-02-22-bank-email-parsers-implementation.md  2026-02-22-line-notification-design.md  2026-02-22-line-notification-implementation.md  2026-02-27-line-agentic-worker-design.md  2026-02-27-line-agentic-worker-implementation.md  2026-02-27-line-webhook-receiver-design.md  2026-02-27-line-webhook-receiver-implementation.md  2026-02-27-project-restructure-design.md  2026-02-27-project-restructure-implementation.md  2026-02-28-local-agent-cli-design.md  2026-02-28-local-agent-cli-implementation.md  2026-03-01-flex-message-chat-design.md  2026-03-01-flex-message-chat-implementation.md  cicd-makefile.md
infra/: .terraform.lock.hcl  backend.tf  cloudflare.tf  iam.tf  lambda.tf  outputs.tf  provider.tf  s3.tf  ses.tf  sqs.tf  ssm.tf  variables.tf
migrations/: README  env.py
migrations/versions/: 001_initial_schema.py  002_add_transactions.py  003_add_line_recipient_id.py  004_drop_body_html.py  005_add_line_messages.py  006_rename_line_messages_to_chat_messages.py
src/spend_tracking/adapters/: chat_message_repository_db.py  chat_message_repository_db_test.py  email_queue_sqs.py  email_repository_db.py  email_storage_s3.py  line_message_queue_sqs.py  line_message_repository_db.py  line_message_repository_db_test.py  notification_sender_line.py  notification_sender_line_test.py  transaction_repository_db.py
src/spend_tracking/cli/: chat.py
src/spend_tracking/domains/: models.py  models_test.py
src/spend_tracking/interfaces/: chat_message_repository.py  email_parser.py  email_queue.py  email_repository.py  email_storage.py  line_message_queue.py  line_message_repository.py  notification_sender.py  transaction_repository.py
tests/router/: test_validate_and_enqueue.py
tests/shared/: test_models.py
tests/worker/: test_cathay_parser.py  test_flex_message.py  test_line_notification_sender.py  test_process_email.py
(+41 files in other folders)
