[tool.poetry]
name = "spend-tracking"
version = "0.1.0"
description = "Email-based personal spend tracking service"
authors = []
packages = [{include = "spend_tracking", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35"
psycopg2-binary = "^2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
