[tool.poetry]
name = "spend-tracking"
version = "0.1.0"
description = "Email-based personal spend tracking service"
authors = []
packages = [{include = "spend_tracking", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35"
psycopg2-binary = "^2.9"
anthropic = "^0.84"
alembic = "^1.18.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.11"
mypy = "^1.15"
boto3-stubs = {version = "^1.35", extras = ["boto3"]}
types-psycopg2 = "^2.9"

[tool.pytest.ini_options]
testpaths = ["src"]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["spend_tracking"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "spend_tracking.domains.models_test",
    "spend_tracking.adapters.notification_sender_line_test",
    "spend_tracking.lambdas.services.validate_and_enqueue_test",
    "spend_tracking.lambdas.services.process_email_test",
    "spend_tracking.lambdas.services.flex_message_test",
    "spend_tracking.lambdas.services.parsers.cathay_test",
    "spend_tracking.adapters.chat_message_repository_db_test",
    "spend_tracking.lambdas.services.receive_line_webhook_test",
    "spend_tracking.lambdas.services.process_line_message_test",
    "spend_tracking.lambdas.line_webhook_router_handler_test",
    "spend_tracking.lambdas.line_message_worker_handler_test",
    "spend_tracking.lambdas.services.agent_test",
]
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
